Stopped blur bleeding

--- a/src/core/Music/BGM.scss
+++ b/src/core/Music/BGM.scss
@@ -2,11 +2,10 @@
 	z-index: 999;
 	position: fixed;
 	top: 15px;
-	left: 45px;
+	left: 50px;
 	font-size: xx-large;
 	cursor: pointer;
 	transition: 200ms ease-in-out;
-	backdrop-filter: blur(2px);
 	border-radius: 100%;
 
 	&:hover {
